# H-Gripe-comfyui

./: .gitattributes  .gitignore  API_FIRST_DESKTOP_PLAN.md  CONTRIBUTING.md  Cargo.toml  PSD_AI_PRODUCTION_WORKFLOW_RESEARCH.md  README.md  SECURITY.md  SUBJECT_MASK_MATTE_CARD_PLAN.md  h-gripe.project.json  pyproject.toml  requirements.txt
.agents/skills/testing-studio-ui/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml  test-execution.yml  test-unit.yml
app/: user_manager.py
apps/desktop-tauri/: .gitignore  README.md
apps/desktop-tauri/shell-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/shell-ui/src/: comfy.ts  config.ts  dashboard.ts  dom.ts  history.ts  i18n.ts  main.ts  nodeEditor.ts  psd.ts  run.ts  studio.ts  styles.css  tauri.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop-tauri/src-tauri/.cargo/: config.toml
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/resources/models/: .gitignore  README.md
apps/desktop-tauri/src-tauri/src/: comfy.rs  contracts.rs  main.rs  psd.rs  resource.rs  studio.rs  thumb_cache.rs
apps/desktop-tauri/src-tauri/src/commands/: config.rs  history.rs  media.rs  mod.rs  runtime.rs  shell.rs  tasks.rs  thumbnails.rs  video.rs
apps/desktop-tauri/src-tauri/src/psd/: cards.rs  compose.rs  engines.rs  model_paths.rs  repaint.rs
apps/desktop-tauri/src-tauri/src/studio/: api_call.rs  cmyk_decode.rs  cmyk_transform.rs  color_match.rs  crop.rs  detail_repaint.rs  detail_watchdog.rs  edge_refine.rs  exec.rs  ffmpeg_native.rs  frame_cache.rs  generate.rs  graph.rs  history.rs  image_buffer.rs  image_enhance.rs  image_enhance_cpu.rs  media_index.rs  mod.rs  node_registry.rs  onnx_pool.rs  persist.rs  pixel_ops.rs  prompt_optimize.rs  psd_analyze.rs  psd_export.rs  run_cancel.rs  run_events.rs  schedule.rs  studio_image.rs  subject_mask.rs  subject_matte.rs  subject_model.rs  subject_sam2.rs  subject_segment.rs  torch_worker.rs  video_assemble.rs  video_engine.rs  video_trim.rs  video_worker.rs  (+2 more)
apps/desktop-tauri/src-tauri/src/studio/color/: cmyk_decode.rs  cmyk_transform.rs  linear.rs  mod.rs  working_image.rs
apps/desktop-tauri/studio-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
comfy/: cli_args.py
crates/hgripe-api/: Cargo.toml
crates/hgripe-api/src/: broker.rs  credentials.rs  diagnostics.rs  history.rs  lib.rs  model.rs  outputs.rs  profiles.rs  provider.rs  setup.rs
crates/hgripe-api/src/providers/: custom_http.rs  mock.rs  mod.rs  openai_compatible.rs  replicate.rs
crates/hgripe-api/tests/: broker_tests.rs  cli_tests.rs  config_cli_tests.rs  credentials_tests.rs  custom_http_tests.rs  diagnostics_tests.rs  history_tests.rs  openai_compatible_tests.rs  profiles_tests.rs  replicate_tests.rs  setup_tests.rs
custom_nodes/: hgripe_api_nodes.py  hgripe_psd_nodes.py
docs/: card-executor-split-and-psd-chain-hardening.md  credentials.example.json  implementation-status.md  phase2-algorithm-roadmap.md  provider_profiles.example.json
docs/cards/: detail-repaint.md  detail-watchdog.md  editor-resource-model.md  generic-media-card.md  image-enhance.md  match-light-color.md  psd-context-analyze.md  psd-export.md  refine-mask-edge.md  subject-mask-matte.md
docs/design/: colour-pipeline.md  editor-resource-model.md  executor-split-and-psd-chain-hardening.md  phase2-algorithm-roadmap.md  rust-dependency-vendoring.md
python/bridge/: analyze_psd_cli.py  color_match_cli.py  compose_psd_cli.py  custom_http_async_job_example.py  custom_http_binary_output_example.py  custom_http_credentials_ref_example.py  custom_http_example.py  custom_http_multipart_example.py  custom_http_profile_example.py  detail_repaint_cli.py  detail_watchdog_cli.py  device_probe_cli.py  edge_refine_cli.py  hgripe_api_bridge.py  history_rerun_example.py  history_tail_example.py  image_enhance_cli.py  image_enhance_node_example.py  image_generate_node_example.py  inspect_psd_cli.py  linear_light.py  mock_task_example.py  openai_compatible_audio_speech_node_example.py  openai_compatible_audio_text_node_example.py  openai_compatible_credentials_ref_example.py  openai_compatible_image_edit_node_example.py  openai_compatible_image_node_example.py  openai_compatible_profile_example.py  openai_compatible_text_example.py  openai_compatible_vision_node_example.py  psd_smart_object_example.py  psd_workflow_example.py  replicate_run_node_example.py  torch_worker.py  video_job_node_example.py  video_probe_cli.py  video_worker.py  vision_analyze_node_example.py  wide_gamut.py
python/bridge/color_backends/: __init__.py  onnx_harmonize.py
python/bridge/detector_backends/: __init__.py  onnx_defect.py
python/bridge/inpaint_backends/: __init__.py  flux_fill.py  sd_inpaint.py  sdxl_inpaint.py
python/bridge/matting_backends/: __init__.py  vitmatte_onnx.py
python/bridge/sr_backends/: __init__.py  ccsr.py  realesrgan.py  supir.py
python/bridge/tests/: test_analyze_psd_cli.py  test_color_backends.py  test_color_match_cli.py  test_compose_psd_cli.py  test_detail_repaint_cli.py  test_detail_watchdog_cli.py  test_detector_backends.py  test_device_probe.py  test_edge_refine_cli.py  test_image_enhance_cli.py  test_inpaint_backends.py  test_inspect_psd_cli.py  test_linear_light.py  test_matting_backends.py  test_sr_backends.py  test_torch_worker.py  test_video_probe_cli.py  test_video_worker.py  test_wide_gamut.py  tiny_diffusers.py
scripts/: fetch-birefnet.ps1  fetch-birefnet.sh  fetch-person-model.ps1  fetch-person-model.sh  fetch-realesrgan.ps1  fetch-realesrgan.sh  fetch-sam2.ps1  fetch-sam2.sh  fetch-subject-model.ps1  fetch-subject-model.sh  fetch-vitmatte.ps1  fetch-vitmatte.sh  fetch-watchdog-text.ps1  fetch-watchdog-text.sh  gen_cmyk_jpeg_fixture.py  gen_unmarked_cmyk_jpeg_fixture.py  gen_ycck_jpeg_fixture.py
tests-unit/app_test/: user_manager_system_user_test.py
tests-unit/prompt_server_test/: system_user_endpoint_test.py
(+124 files in other folders)
