[package]
name = "hgripe-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hgripe-api-broker"
path = "src/bin/hgripe_api_broker.rs"

[[bin]]
name = "hgripe-api-history"
path = "src/bin/hgripe_api_history.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
