[package]
name = "hgripe-desktop"
version = "0.1.0"
edition = "2021"
description = "H-Gripe API-first desktop shell"
publish = false

[[bin]]
name = "hgripe-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Native file-open dialog for the node editor (pick_file command). Invoked from
# Rust, so no frontend capability/permission entry is required.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
# Thumbnail generation for the node-graph editor (generate_thumbnail command).
image = "0.25"
# ONNX Runtime for Phase 2 auto-subject model inference (in-process, Compute lane).
# `download-binaries` fetches a prebuilt CPU onnxruntime at build time so no
# system install is required.
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries", "tls-rustls"] }
hgripe-api = { path = "../../../crates/hgripe-api" }
