[package]
name = "hgripe-desktop"
version = "0.1.0"
edition = "2021"
description = "H-Gripe API-first desktop shell"
publish = false

[[bin]]
name = "hgripe-desktop"
path = "src/main.rs"

[features]
# Native in-process FFmpeg decoder backend (a second `FrameSource` behind the
# media-engine seam), linked against the vendored LGPL *shared* libav* libraries
# checked into `third_party/ffmpeg` via git-lfs — cut from upstream, locally
# maintained, no system ffmpeg and no PyAV. Off by default so the ordinary build
# stays PyAV-only; the CI `tauri (cargo test)` job opts in. The `FFMPEG_*`
# link/binding env for `rusty_ffmpeg` lives in `.cargo/config.toml`, and
# `build.rs` copies the runtime DLLs next to the test/app binaries. Decoder
# failures fall back to the PyAV/one-shot path exactly as before.
native-ffmpeg = ["dep:rusty_ffmpeg"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Native file-open dialog for the node editor (pick_file command). Invoked from
# Rust, so no frontend capability/permission entry is required.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
# Thumbnail generation for the node-graph editor (generate_thumbnail command).
image = "0.25"
# Direct PNG encoder for the in-process enhance output so it can embed a source
# ICC profile (iCCP) + DPI (pHYs), matching the Python bridge's save. Already in
# the tree transitively via `image`; pinned here to use its API directly.
png = "0.17"
# Data-parallelism for CPU-bound image operators (e.g. mask morphology). Runs on
# the Compute lane's worker threads, independent of the GPU serialization gate.
rayon = "1"
# ONNX Runtime for Phase 2 auto-subject model inference (in-process, Compute lane).
# `download-binaries` fetches a prebuilt CPU onnxruntime at build time so no
# system install is required.
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries", "tls-rustls"] }
# Native in-process FFmpeg decoder (feature `native-ffmpeg`). Linked against the
# vendored LGPL shared libav* under third_party/ffmpeg via the FFMPEG_* env in
# `.cargo/config.toml`; `use_prebuilt_binding` ships FFmpeg 8 bindings (matching
# the vendored 8.1 libs) so no libclang/bindgen is needed on CI. `ffmpeg8_1`
# aligns the version cfgs with those libs.
rusty_ffmpeg = { version = "0.17", default-features = false, features = ["ffmpeg8_1", "use_prebuilt_binding"], optional = true }
# Raw CMYK sample access for the in-process enhance path. The `image` crate
# converts CMYK -> RGB and drops the ICC at decode, so a faithful ICC
# CMYK -> sRGB transform needs the raw 4-channel samples straight from the JPEG
# (`zune-jpeg`, out colourspace pinned to CMYK) / TIFF (`tiff`, CMYK photometric)
# decoder. Both are already in the tree transitively via `image`; pinned here to
# use their APIs directly. `zune-core` provides the shared `ColorSpace` /
# `ZCursor` types. See `studio/cmyk_decode.rs`.
zune-jpeg = "0.5"
zune-core = "0.5"
tiff = "0.11"
# Pure-Rust colour management for the ICC CMYK -> sRGB transform on the enhance
# fast path (R3 CMYK step c2). Applies the embedded CMYK profile's A2B LUT the
# same way the Python bridge does via littleCMS (`ImageCms.profileToProfile`),
# with a naive PIL-formula fallback when no profile is present. Used by
# `studio/cmyk_transform.rs`.
# `options` enables the tetrahedral LUT interpolation used below to match
# littleCMS / lcms2 (moxcms defaults to quadlinear for CMYK).
moxcms = { version = "0.8.1", features = ["options"] }
hgripe-api = { path = "../../../crates/hgripe-api" }
